# python-fastapi-Curso-Dunossauro

./: README.md  pyproject.toml
fast_api_base/: app.py
tests/: test_app.py
