[tool.poetry]
name = "fast-api-base"
version = "0.1.0"
description = ""
authors = ["fabiocasadossites <contato@casadossites.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
run = 'fastapi dev fast_api_base/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest --cov=fast_api_base -vv'
post_test = 'coverage html'

[tool.ruff]
line-length= 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
